--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-server.port=6060
+server.port=7070
 spring.datasource.username=root
 spring.datasource.password=Manager123**
 spring.jpa.hibernate.ddl-auto=update
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=x@gmail.com
-spring.mail.password=yqvdgeficsioetxf
+spring.mail.username=issalhy217@gmail.com
+spring.mail.password=fxtvamlnrenvvghh
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
